# logsight-sdk-py

./: .gitchangelog.rc  .gitignore  .logsight  CHANGELOG.rst  LogsightLogger.py  PREPRODUCTION.md  README.md  README.rst  RELEASE.md  RELEASE.rst  main.py  release.sh  requirements-dev.txt  requirements-release.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  testpypi.key  tox.ini
.github/workflows/: build.yml  log-quality.yml  log_quality.yml  publish.yml  python-package.yml  release.yaml
cli/: cli.rst  log_parser.py  ls-cli.py  ls-cli.rst  ls.py  lsc.py
cli/application/: __init__.py  application.py
cli/applications/: application.py
cli/compare/: compare.py
cli/incident/: incident.py
cli/incidents/: incidents.py
cli/log/: log.py
cli/logs/: logs.py
cli/transformation/: transformation.py
doc/sdk/: how_to.md
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  (+6 more)
logsight/: api_client.py  applications.py  config.py  endpoints.py  exceptions.py  incidents.py  logger.py  quality.py  result.py  template.py  utils.py
logsight_sdk/: api_client.py  config.py  endpoints.py
tests/: config.py  test_api.py  test_app_mng.py  test_applications.py  test_authentication.py  test_compare.py  test_hello_app.py  test_hello_app.sh  test_hello_app_single.sh  test_incidents.py  test_interval_parser.py  test_log_api.py  test_logger.py  test_logger_result.py  test_logger_result.sh  test_logs_.py  test_mng_hello_app.sh  test_multi_app.py  test_multi_app.sh  test_scenario.py  test_single_app.py  test_single_app.sh  test_users.py  utils.py
(+62 files in other folders)
