[metadata]
# replace with your username:
name = logsight
version = 0.0.1
author = Florian Schmidt
author_email = florian.schmidt@tu-berlin.de
description = Python Logging sender for logsight
long_description = file: README.md
long_description_content_type = text/markdown
url = git@github.com:aiops/logsight-python-sdk.git
project_urls =
    Bug Tracker = https://github.com/aiops/logsight-python-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src